Revision history for perl module Module::Info

0.35_06 2015-10-17 NEILB
    - Added "use strict" to both modules
    - Made the pod coverage test a release test RT#90599
    - Added MIN_PERL_VERSION to Makefile.PL

0.35_05 2015-10-16 NEILB
    - Had a single failure reported by CPAN Testers for Perl 5.22/Windows.
      On Windows, if you "use Cwd" and then call cwd(), then it does an
      implicit "use Win32". On recent perls (sometime after 5.20.1) this
      seems to get built into the op tree in a way that looks like the
      scope doing the cwd() use'd Win32. There are several magic functions
      in Cwd.pm which will probably trigger this behaviour. I'll see how this
      change tests out, and possibly just document it for a non dev release.

0.35_04 2015-10-14 NEILB
    - Sigh, forgot to update the min version of B::Utils in Makefile.PL
      Thanks to SREZIC for letting me know.

0.35_03 2015-10-13 NEILB
    - Removed File::Spec from t/lib/
    - Set min required version of B::Utils to 0.27, as that release fixes
      the remaining failing tests.
    - Hacked const_sv() to cope with the change in OP_METHOD_NAMED
      that happened at 5.21.5 (or possibly an earlier 5.21.*).

0.35_02 2015-06-15 NEILB
    - Sigh, forgot to add B::Utils to PREREQ_PM

0.35_01 2015-06-15 NEILB
    - Dropped B::BUtils in favour of using the standard B::Utils.
      subroutines_called() stopped working correctly for standard function
      calls, identifying them as calls via symbolic references. Fixed that.
    - Dropped Build.PL

0.35 2013-09-08 14:10:31 CEST
    - Handle 'package NAME VERSION' syntax (patch by Norbert Gruener)
    - Added repository and license info to metadata
    - Tweaked format of Changes (this file) to match CPAN::Changes::Spec

0.34 2013-05-21 21:48:49 CEST
    - Replace Test::Soundex in tests with Class::Struct, since
      Text::Soundex will not be in core in Perl 5.19 and up.
    - Replace ExtUtils::MY_Metafile with META_MERGE in Makefile.PL.
