@@ -1,5 +1,6 @@
 Changes
 MANIFEST
+README
 Makefile.PL
 bin/module_info
 bin/pfunc
