@@ -12,7 +12,7 @@ my $has_version_pm = eval 'use version; 1';
 our $AUTOLOAD;
 our $VERSION;
 
-$VERSION = eval 'use version; 1' ? 'version'->new('0.35_05') : '0.35_05';
+$VERSION = eval 'use version; 1' ? 'version'->new('0.35_06') : '0.35_06';
 $VERSION = eval $VERSION;
 
 
